--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<h1>Make Your Tour Amazing <br> With Us</h1>
 			<p>"Embark on a journey of extraordinary experiences with us!" Make your tour truly amazing as we bring you unparalleled adventures and seamless travel moments.<br>Make your tour a masterpiece with our dedicated team, where every detail is designed to make your adventure not just memorable, but truly extraordinary.</p>
         
-			<a href="" class="hero-btn">LEARN MORE</a>
+			<a href="blog.html" class="hero-btn">LEARN MORE</a>
 			<a href="contact.html" class="hero-btn2">BOOK NOW</a>
 			
 		</div>
