--- a/about.html
+++ b/about.html
@@ -49,28 +49,29 @@
 		</div>
 		
 	</div>
+
+	<div class="row">
+		<div class="class-col">
+			<h3>Melborn</h3>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nostrum ipsam recusandae, ut rerum, laudantium, officia pariatur nobis tempora facere quo. Non harum quibusdam enim voluptatum laudantium ipsa aperiam eum?</p>
+			<a href ="" class="hero-btn1">BOOK NOW</a>
+		</div>
+		<div class="class-col">
+			<h3>Moscow</h3>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nostrum ipsam recusandae, ut rerum, laudantium, officia pariatur nobis tempora facere quo. Non harum quibusdam enim voluptatum laudantium ipsa aperiam eum?</p>
+			<a href ="" class="hero-btn1">BOOK NOW</a>
+		</div>
+		<div class="class-col">
+			<h3>Tokiyo</h3>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nostrum ipsam recusandae, ut rerum, laudantium, officia pariatur nobis tempora facere quo. Non harum quibusdam enim voluptatum laudantium ipsa aperiam eum?</p>
+			<a href ="" class="hero-btn1">BOOK NOW</a>
+		</div>
+		
+	</div>
 	
 </section>
 
-<div class="row">
-	<div class="class-col">
-		
-		<h3>London</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, expedita?
-		</p>
-		<a href ="https://www.london.gov.uk/" class="hero-btn1">More Details</a>
-	</div>
-	<div class="class-col">
-		<h3>Newyork</h3>
-		<p>New York City, ofteican spirit. Iconic landmarks like Times Square, Central Park, and th</p>
-		<a href ="https://www.ny.gov/" class="hero-btn1">More Details</a>
-	</div>
-	<div class="class-col">
-		<h3>Washington</h3>
-		<p>Waarchitecture. The National Mall, flanked by iconic structures like t</p>
-		<a href ="https://wa.gov/" class="hero-btn1">More Details</a>
-	</div>
-</div>
+
 
 <!----- Footer------>
 <section class="Footer">
