--- a/tour.html
+++ b/tour.html
@@ -43,17 +43,23 @@
 	<div class="row">
 		<div class="class-col">
 			<h3>London</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nostrum ipsam recusandae, ut rerum, laudantium, officia pariatur nobis tempora facere quo. Non harum quibusdam enim voluptatum laudantium ipsa aperiam eum?</p>
+			<img src="images/london.jpg" alt="" style="width: 200px; height: 200px; border-radius: 20px;">
+			<p>London is a historic and vibrant city known for its iconic landmarks such as the Big Ben, the Tower of London, Buckingham Palace, and the British Museum. It is a major financial, cultural, and political center.
+			</p>
 			<a href ="" class="hero-btn1">BOOK NOW</a>
 		</div>
 		<div class="class-col">
 			<h3>Newyork</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nostrum ipsam recusandae, ut rerum, laudantium, officia pariatur nobis tempora facere quo. Non harum quibusdam enim voluptatum laudantium ipsa aperiam eum?</p>
+			<img src="images/newyork.jpg" alt="" style="width: 200px; height: 200px; border-radius: 20px;">
+			<p>New York City, often referred to as "The Big Apple," is known for its skyline featuring the Empire State Building, Times Square, Central Park, and cultural institutions like the Metropolitan Museum of Art and Broadway theaters.
+			</p>
 			<a href ="" class="hero-btn1">BOOK NOW</a>
 		</div>
 		<div class="class-col">
 			<h3>Washington</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nostrum ipsam recusandae, ut rerum, laudantium, officia pariatur nobis tempora facere quo. Non harum quibusdam enim voluptatum laudantium ipsa aperiam eum?</p>
+			<img src="images/washington.jpg" alt="" style="width: 200px; height: 200px; border-radius: 20px;">
+			<p>Washington, D.C. is the capital of the United States, home to the President and many national government buildings. Key landmarks include the White House, the Capitol Building, the Lincoln Memorial, and the Smithsonian museums.
+			</p>
 			<a href ="" class="hero-btn1">BOOK NOW</a>
 		</div>
 		
@@ -62,17 +68,22 @@
 	<div class="row">
 		<div class="class-col">
 			<h3>Melborn</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nostrum ipsam recusandae, ut rerum, laudantium, officia pariatur nobis tempora facere quo. Non harum quibusdam enim voluptatum laudantium ipsa aperiam eum?</p>
+			<img src="images/melbourn.jpg" alt="" style="width: 200px; height: 200px; border-radius: 20px;">
+			<p>Melbourne is known for its cultural diversity, vibrant arts scene, and coffee culture. It features attractions like the Royal Botanic Gardens, Federation Square, and the Melbourne Cricket Ground.
+			</p>
 			<a href ="" class="hero-btn1">BOOK NOW</a>
 		</div>
 		<div class="class-col">
 			<h3>Moscow</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nostrum ipsam recusandae, ut rerum, laudantium, officia pariatur nobis tempora facere quo. Non harum quibusdam enim voluptatum laudantium ipsa aperiam eum?</p>
+			<img src="images/moscow.jpg" alt="" style="width: 200px; height: 200px; border-radius: 20px;">
+			<p>Moscow, the capital of Russia, is famous for its historic architecture and landmarks such as the Kremlin, Red Square, St. Basil's Cathedral, and the Bolshoi Theatre.
+			</p>
 			<a href ="" class="hero-btn1">BOOK NOW</a>
 		</div>
 		<div class="class-col">
 			<h3>Tokiyo</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nostrum ipsam recusandae, ut rerum, laudantium, officia pariatur nobis tempora facere quo. Non harum quibusdam enim voluptatum laudantium ipsa aperiam eum?</p>
+			<img src="images/tokyo.jpg" alt="" style="width: 200px; height: 200px; border-radius: 20px;">
+			<p>Tokyo is a bustling metropolis known for its blend of traditional and modern influences. Key attractions include the Tokyo Tower, the Imperial Palace, Shibuya Crossing, and a variety of temples and shrines.</p>
 			<a href ="" class="hero-btn1">BOOK NOW</a>
 		</div>
 		
