--- a/tour.html
+++ b/tour.html
@@ -38,7 +38,7 @@
 
 <section class="destinations">
 	<h1>Tours we offer</h1>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Quidem quod excepturi unde quae, eligendi sequi rerum pariatur verita</p>
+	<p>Discover the world with our curated tours designed to provide unforgettable experiences. Whether you seek the historic charm of ancient cities, the bustling energy of modern metropolises, or the serene beauty of natural landscapes, our tours cater to every traveler’s dream.</p>
 
 	<div class="row">
 		<div class="class-col">
