--- a/about.html
+++ b/about.html
@@ -56,8 +56,8 @@
 <section class="places">
 
 	<div class="blur-background">
-	<h1 style="font-size: 35px;">Top destinations in Sri Lanka</h1>
-	<p style="color: black; font-weight: 600; font-size: large;">"Embark on a voyage of discovery as we unveil the enchanting beauty and cultural richness of our Sri Lankan places. Nestled within the heart of the Indian Ocean, Sri Lanka beckons with a tapestry of landscapes, from pristine beaches to lush tea plantations and ancient cities steeped in history.</p>
+	<h1 style="font-size: 35px;">Our Partnerships and Collaborations</h1>
+	<p style="color: black; font-weight: 600; font-size: large;">We proudly partner with leading airlines, hotels, and tour operators to bring you the best travel experiences.</p>
     </div>
 
 	<div class="row">
