--- a/tour.html
+++ b/tour.html
@@ -129,7 +129,7 @@
 
 		<div class="packages-col">
 			<img src="images/facility4.jpg">
-			<h3>Emergency Assistance</h3>
+			<h3>24/7Customer Support</h3>
 			<p></p>
 
 		</div>
