--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
 		<i class="fa fa-twitter"></i>
 		<i class="fa fa-instagram"></i>
 	</div>
-	<p>Made by <i class="fa fa-heart-o"></i> 21CIS0069 Yasith</p>
+	<p>&copy; 2024 Travel Beyond. All rights reserved. Made by <i class="fa fa-heart-o"></i> 21CIS0069 Yasith</p>
 </section>
 
 
