--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 <section class="places">
 
 	<div class="blur-background">
-	<h1 style="font-size: 35px;">Our Partnerships and Collaborations</h1>
+	<h1 style="font-size: 35px;">Our Partnerships, Collaborations and Awards</h1>
 	<p style="color: black; font-weight: 600; font-size: large;">We proudly partner with leading airlines, hotels, and tour operators to bring you the best travel experiences.</p>
     </div>
 
