--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 				<i class="fa fa-envelope-o"></i>
 				<span>
 					<h5>traverse@gmail.com</h5>
-					<p>Email your query</p>
+					<p>traverse@gmail.com</p>
 				</span>
 			</div>
 		</div>
