--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 		</div>
 
 		<div class="places-col">
-			<img src="images/srilanka-4755729.jpg" alt="coconut hill">
+			<img src="images/coconuthill.jpg" alt="coconut hill">
 			<div class="layer">
 				<a href="" class="hero-btn2">BOOK NOW</a>
 				<h3>COCONUT HILL</h3>
@@ -123,7 +123,7 @@
 		</div>
 
 		<div class="places-col">
-			<img src="images/colombo-4759588_1920.jpg" alt="colombo">
+			<img src="images/colombo.jpg" alt="colombo">
 			<div class="layer">
 				<a href="" class="hero-btn2">BOOK NOW</a>
 				<h3>COLOMBO</h3>
